ChangeLog PeerGuardian Linux (pgl)

pgl 2.1.0~pre1 The GUI release!

  [ jimtb ]
  * fixed dbus implementation in pgld

  [freemind]
  * added new GUI: pgl-gui (C++, Qt)
    partly based on old mobloquer
    moved old code to pgl-gui.qt-old

  [ jre ]
  * place local blocklists in LOCAL_BLOCKLIST_DIR (/etc/pgl/blocklists.local)
    instead of MASTER_BLOCKLIST_DIR
  * fixed: install pgld logrotate
  * pglcmd:
    - returned to using single port whitelisting (--dport), instead of using
      netfilter multiport module.
      Reason: Allow pgl-gui to *instantly* add/remove single ports to the
      whitelisting.
    - email_stats: start sendmail in the background
      speeds up stop/restart
    - removed hardcoded pathname of start-stop-daemon
  * added blockcontrol2pglcmd.sh configuration transition script
  * renamed VERBOSITY variable to VERBOSE

-- jre <jre-phoenix@users.sourceforge.net>  Wed, 20 Apr 2011 14:13:36 +0200

pgl 2.0.4

  [ jre ]
  * internal LSB init-functions:
    - updated based on Debian's 3.2-27
    - use start-stop-daemon if available
    - removed obsolete check for -p --> -p guarding p2p
  * Makefile:
    - removed "clean" from "dist" target - unnecessary
    - only add GUI code to dist, if MAKE_PGLGUI is yes
    - use generic RELEASEFILE name, depending on MAKE_PGLGUI
  * fixed automatic whitelisting of local FORWARD traffic. Now really Closes SF
    Bug #3057107. Thx athanasius!
  * extended kernel module loading
  * iptables handling:
    - fixed: check for already whitelisted LAN now copes with all subnetmasks
    - improved logging
    - be more verbose on iptables insertion
    - minor bugfixes
    - execute old iptables remove script on start in case it still exists (it
      shouldn't!)
  * blocklist management:
    - also merge the local blocklists in MASTER_BLOCKLIST (next to the
      automatically handled remote blocklists). pgld only loads this list.
      - fixes handling of removed/added/changed local blocklists