@@ -359,6 +359,7 @@ Local blocklists are placed here.
 The user configuration file for \fBpglcmd\fR.
 .IP /etc/pgl/allow.p2p
 The allow list in the peerguardian .p2p text format.
+.IP /etc/NetworkManager/dispatcher.d/20pglcmd
 .IP /etc/network/if-up.d/pglcmd
 Gets executed whenever a network interface is brought up to make sure that the
 automatic whitelisting of LAN traffic and the DNS server does work.
