@@ -14,6 +14,10 @@ pgl 2.1.0~pre1 The GUI release!
   * place local blocklists in LOCAL_BLOCKLIST_DIR (/etc/pgl/blocklists.local)
     instead of MASTER_BLOCKLIST_DIR
   * fixed: install pgld logrotate
+  * if-up: use NetworkManager instead of Debian specific /etc/network/if-up.d
+    install if-up to /etc/NetworkManager/dispatcher.d/20pglcmd
+    Debian packaging stays unchanged with /etc/network/if-up.d/pglcmd
+    Do some NM specific checks
   * pglcmd:
     - returned to using single port whitelisting (--dport), instead of using
       netfilter multiport module.
